<?xml version="1.0" encoding="UTF-8"?>
<!--
    这是一个 Maven 项目对象模型（POM）文件，
    用于定义"设备管理系统后端"项目的依赖、构建方式等信息。
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <groupId>com.equipment</groupId>
    <artifactId>equipment-management</artifactId>
    <version>1.0.0</version>
    <name>equipment-management</name>
    <description>设备管理系统后端</description>

    <properties>
        <java.version>17</java.version>
        <mybatis-plus.version>3.5.6</mybatis-plus.version>
        <jjwt.version>0.12.5</jjwt.version>
        <easyexcel.version>3.3.4</easyexcel.version>
        <minio.version>8.5.10</minio.version>
    </properties>

    <dependencies>
        <!-- Spring Boot Web 启动器：提供搭建 Web/REST 接口所需的核心组件（内嵌 Tomcat、Spring MVC 等） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
         <!-- 参数校验启动器：用于 @NotNull、@NotBlank 等注解校验前端传入参数 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
         <!-- AOP（面向切面编程）启动器：常用于日志记录、权限校验、事务等切面逻辑 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
        </dependency>
        <!-- MyBatis-Plus 启动器（适配 Spring Boot 3）：简化 MyBatis 开发，提供通用 CRUD、分页插件等 -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
            <version>${mybatis-plus.version}</version>
        </dependency>
        <!-- MySQL 驱动：连接 MySQL 数据库使用，scope=runtime 表示只在运行时需要，编译时不需要 -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <!-- JJWT（Java JWT）核心 API：用于生成、解析 JWT 令牌，实现登录态鉴权 -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${jjwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>easyexcel</artifactId>
            <version>${easyexcel.version}</version>
        </dependency>
        <!-- EasyExcel/POI 写 xlsx 需要 commons-io 2.12+（AbstractStreamBuilder） -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>
        <!-- MinIO 客户端 SDK：用于对接 MinIO 对象存储服务，实现设备图片、附件等文件的上传下载 -->
        <dependency>
            <groupId>io.minio</groupId>
            <artifactId>minio</artifactId>
            <version>${minio.version}</version>
        </dependency>
         <!-- Lombok：通过注解（如 @Data、@Getter/@Setter）自动生成样板代码，减少手写 getter/setter。
             optional=true 表示该依赖不会传递给依赖本项目的其他模块 -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- Spring Boot 测试启动器：提供 JUnit、Mockito 等单元测试/集成测试所需依赖，
             scope=test 表示只在测试阶段生效，不会打入最终的可运行包中 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
        <!-- Spring Boot Maven 插件：负责将项目打包成可独立运行的可执行 jar（内嵌 Tomcat） -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
